Break it into two lines.

--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
 			</section>
 			<section>
 				<h2>Thanks</h2>
-				<div>Sebastian Korfmann - @skorfmann</div>
+				<div>Sebastian Korfmann</div>
+				<div>@skorfmann</div>
 				<br/>
 				<div>https://koideploy.com</div>
 			</section>
