--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				</h2>
 					<ul>
 						<li>Build</li>
-						<li>Grow</li>
+						<li>Experience</li>
 						<li>Learn</li>
 					</ul>
 			</section>
